# mini-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start_web.bat  web_server.py
agent/: __init__.py  config.py  llm.py  memory.py  runtime.py  session.py  tool_executor.py  trace.py  user_manager.py
agent/tools/: __init__.py  base.py  calculator.py  datetime_tool.py  file_reader.py  file_writer.py  search.py  todo_manager.py
static/: app.js  index.html  style.css
tests/: __init__.py  test_tool_base.py
