[project]
name = "mini-agent"
version = "0.1.0"
description = "最小可用 Agent - 从零实现"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "PyMuPDF>=1.27.0",
    "python-docx>=1.2.0",
    "fpdf2>=2.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
